Made About Page Generic
Before, the page assumed that you would use this if you were in IT. It
has been changed to be generic for everyone.

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 			<article>
 				<p class="intro">My name is ..., and here is some information about me.</p><br/>
 				<div class="aboutContent">
-					<h2>- IT Related Experiences</h2>
+					<h2>- Experience About MY PROFESSION</h2>
 					<span class="fa fa-windows fa-3x"></span><p>This would be an example of someone with experience in Windows. (Including: XP, Vista, 7, 8, and 8.1).</p><br/>
 					<span class="fa fa-android fa-3x"></span><p>This would be an example of someone with experience in Android OS.</p><br/>
 					<span class="fa fa-apple fa-3x"></span><p>This would be an example of someone with experience in OSX.</p><br/>
